--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -6,6 +6,9 @@ en:
   models:
     user:
       bug_size: "size picture not less than %{size}MB"
+    order_item:
+      product_nil: "is not valid or is not active."
+      order_nil: "is not a valid order."
   web_info:
     phone: " +2 95 01 88 821"
     email: " info@domain.com"
@@ -58,6 +61,19 @@ en:
     session:
       account_not_activated: "Acount must activate!"
       email_pass_bug: "Email/password not found!"
+    order_item:
+      delete_success: "Delete successfully!"
+      delete_bug: "Delete bug!"
+      max_quantity: "Maximum %{number}"
+      order_not_found: "Order not found!"
+      quantity_zero: "Produc out of quantity!"
+      product_not_found: "Product not found!"
+    cart:
+      order_not_exists: "Order not exists!"
+    checkout:
+      order_not_exists: "Order not exists!"
+    history_order:
+      not_found_order: "Order not found!"
   users:
     new:
       title: "Sign up"
@@ -107,3 +123,52 @@ en:
   products:
     alt_img: "Foods"
     product_not_found: "Product not found"
+    index:
+      title: "Home"
+  helpers:
+    session:
+      bug_create_order: "Bug create order!"
+  carts:
+    index:
+      title: "Shop cart"
+  shared:
+    cart:
+      home: "Home"
+      shoping_cart: "Shopping Cart"
+      item: "Item"
+      name: "Name"
+      price: "Price"
+      quantity: "Quantity"
+      total: "Total"
+      cart_sub: "Cart Sub Total"
+      eco_tax: "Eco Tax"
+      shipping_cost: "Shopping Cost"
+      total: "Total"
+      histotry: "History"
+      checkout: "Check Out"
+      time: "Time"
+  orders:
+    order:
+      name: "Name"
+      quantity: "Quantity"
+      subtotal: "SubTotal"
+      status: "Status"
+      cancel: "Cancel"
+      are_you_sure: "Are you Sure?"
+  history_orders:
+    index:
+      confirm: "Confirm"
+      cancel: "Cancel"
+      accept: "Accept"
+      refuse: "Refuse"
+      finish: "Finish"
+      no-confirm: "Order confirm No transaction history!!"
+      no_cancel: "Order cancel No transaction history!!"
+      no_accept: "Order accept No transaction history!!"
+      no_refuse: "Order refuse No transaction history!!"
+      no_finish: "Order finish No transaction history!!"
+  evaluators:
+    alert:
+      bug: "not valid."
+      confirm_delete: "Are you sure?"
+      confirm_cancel: "Are you cancel?"
