Search by name product

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -35,6 +35,7 @@ en:
     all_items: "Hot Items"
     submit: "Submit"
     rating: "Rating: "
+    search: "Search"
   title:
     detail: "Detail"
   footer:
