Show hot items - sidebar

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -32,6 +32,7 @@ en:
     setting: "Setting"
     logout: "Log out"
     add_cart: "Add to cart"
+    all_items: "Hot Items"
   footer:
     copyright: "Copyright © 2019 Foods & Drinks. All rights reserved."
     text1: "Get the most recent updates from
