--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -100,6 +100,13 @@ en:
         refuse_success: "Order Refused!"
         bug_update: "Bug update: %{name}!"
         not_found_status: "Access bug!"
+      product:
+        post_success: "Product add successfully!"
+        post_danger: "Product add bug!"
+        not_found: "Product not found!"
+        update_success: "Update product successfully!"
+        delete_success: "Delete product successfully!"
+        delete_bug: "Delete product bug!"
   users:
     new:
       title: "Sign up"
@@ -203,6 +210,8 @@ en:
       histotry: "History"
       checkout: "Check Out"
       time: "Time"
+    error_messages:
+      shared: "total bug : %{count}"
   orders:
     order:
       name: "Name"
@@ -265,3 +274,27 @@ en:
         title: "Admin Order"
         total: "Total"
         search: "Search"
+    products:
+      form:
+        name: "Name"
+        price: "Price"
+        quantity: "Quantity"
+        description: "Description"
+        post: "Post"
+      new:
+        title: "Admin Product"
+        button: "Add Product"
+      index:
+        title: "List Product"
+        total_product: "Total Product"
+        image: "Image"
+        name: "Name"
+        price: "Price"
+        quantity: "Quantity"
+        rating: "Rating"
+        control: "Control"
+        button: "Add Product"
+      edit:
+        title: "Upade Product"
+        button: "Save"
+
